--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculator</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Calculator</h1>
-    
+  <h1>Calculator</h1>
+  <div class="calculator">
+    <div>
+      <input class="display" value="0" inputmode="decimal">
+    </div>
+    <div class="buttons">
+      <button class="operator">AC</button>
+      <button class="operator">C</button>
+      <button class="operator">%</button>
+      <button class="operator">÷</button>
+      <button class="digit">7</button>
+      <button class="digit">8</button>
+      <button class="digit">9</button>
+      <button class="operator">+</button>
+      <button class="digit">4</button>
+      <button class="digit">5</button>
+      <button class="digit">6</button>
+      <button class="operator">-</button>
+      <button class="digit">1</button>
+      <button class="digit">2</button>
+      <button class="digit">3</button>
+      <button class="operator">x</button>
+      <button class="digit">0</button>
+      <button class="decimal">.</button>
+      <button class="equal">=</button>
+    </div>
+</div>
 </body>
 </html>
