Adjust logic for digit button presses to react based on the previous button pressed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <input class="display" value="0" inputmode="decimal">
     </div>
     <div class="buttons">
-      <button class="operator">AC</button>
-      <button class="operator">C</button>
+      <button class="all-clear">AC</button>
+      <button class="clear">C</button>
       <button class="operator">%</button>
       <button class="operator">÷</button>
       <button class="digit">7</button>
