--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     <div class="buttons">
       <button class="all-clear">AC</button>
       <button class="clear">C</button>
-      <button class="operator">%</button>
-      <button class="operator">÷</button>
-      <button class="digit">7</button>
-      <button class="digit">8</button>
-      <button class="digit">9</button>
-      <button class="operator">+</button>
-      <button class="digit">4</button>
-      <button class="digit">5</button>
-      <button class="digit">6</button>
-      <button class="operator">-</button>
-      <button class="digit">1</button>
-      <button class="digit">2</button>
-      <button class="digit">3</button>
-      <button class="operator">x</button>
-      <button class="digit">0</button>
+      <button class="operator" id="remainder">%</button>
+      <button class="operator" id="divide">÷</button>
+      <button class="digit" id="digit-7">7</button>
+      <button class="digit" id="digit-8">8</button>
+      <button class="digit" id="digit-9">9</button>
+      <button class="operator" id="add">+</button>
+      <button class="digit" id="digit-4">4</button>
+      <button class="digit" id="digit-5">5</button>
+      <button class="digit" id="digit-6">6</button>
+      <button class="operator" id="subtract">-</button>
+      <button class="digit" id="digit-1">1</button>
+      <button class="digit" id="digit-2">2</button>
+      <button class="digit" id="digit-3">3</button>
+      <button class="operator" id="multiply">x</button>
+      <button class="digit" id="digit-0">0</button>
       <button class="decimal">.</button>
       <button class="equal">=</button>
     </div>
