Add styling to the calculator UI

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <h1>Calculator</h1>
   <div class="calculator">
-    <div>
-      <input class="display" value="0" inputmode="decimal">
+    <div class="display-container">
+      <output class="display" type="text">0</output>
     </div>
     <div class="buttons">
       <button class="all-clear">AC</button>
